--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.12.7
-        uses: actions/setup-python@v4
+      - name: Set up Conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.12.7
-
-      - name: Install MLflow
-        run: |
-          pip install mlflow==2.19.0
+          python-version: 3.12.10
+          environment-file: MLProject/conda.yaml
+          activate-environment: mlflow-env
+          auto-activate-base: false
 
       - name: Run MLflow Project
         run: |
+          conda info --envs
           mlflow run MLProject
