--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,19 @@ jobs:
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.12.10
           environment-file: MLProject/conda.yaml
           activate-environment: mlflow-env
           auto-activate-base: false
+          python-version: 3.12
+
+      - name: Install MLflow CLI manually (fallback)
+        run: |
+          conda activate mlflow-env
+          pip install mlflow==2.19.0
 
       - name: Run MLflow Project
         run: |
-          conda info --envs
+          conda activate mlflow-env
+          which python  # debug info
+          which mlflow  # debug info
           mlflow run MLProject
