--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Conda
+      - name: Setup Miniconda & Create Env
         uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: MLProject/conda.yaml
-          activate-environment: mlflow-env
+          environment-name: mlflow-env
           auto-activate-base: false
+          use-mamba: false
 
-      - name: Install MLflow (manual pip fallback)
-        shell: bash -l {0}
+      - name: Install MLflow
         run: |
-          source activate mlflow-env
-          pip install mlflow==2.19.0
+          conda run -n mlflow-env pip install mlflow==2.19.0
 
       - name: Run MLflow Project
-        shell: bash -l {0}
         run: |
-          source activate mlflow-env
-          mlflow run MLProject
+          conda run -n mlflow-env mlflow run MLProject
