--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MLflow CI Pipeline
+name: MLflow CI with PythonEnv
 
 on:
   push:
@@ -7,25 +7,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  train-model:
+  train:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Miniconda & Create Env
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
         with:
-          environment-file: MLProject/conda.yaml
-          environment-name: mlflow-env
-          auto-activate-base: false
-          use-mamba: false
+          python-version: '3.10'
 
       - name: Install MLflow
-        run: |
-          conda run -n mlflow-env pip install mlflow==2.19.0
+        run: pip install mlflow==2.19.0
 
       - name: Run MLflow Project
         run: |
-          conda run -n mlflow-env mlflow run MLProject
+          mlflow run MLProject
