--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,28 @@ name: MLflow CI with PythonEnv
 
 on:
   push:
-    paths:
-      - 'MLProject/**'
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  train:
+  build-train-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python 3.12.7
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12.7'
+    - name: Set up Python 3.12.7
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.12.7
 
-      - name: Install MLflow
-        run: pip install mlflow==2.19.0
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install mlflow==2.19.0 pandas scikit-learn joblib google-auth google-api-python-client google-auth-httplib2 google-auth-oauthlib
 
-      - name: Run MLflow Project
-        run: |
-          mlflow run MLProject
+    - name: Run MLflow Project (Training)
+      run: |
+        cd MLProject
+        mlflow run . --env-manager=local -P data_path=personality_dataset_clean.csv
