--- a/MLProject/requirements.txt
+++ b/MLProject/requirements.txt
@@ -1,7 +1,3 @@
 mlflow==2.19.0
-cloudpickle==3.1.1
-numpy==1.26.4
-pandas==2.2.3
-psutil==7.0.0
-scikit-learn==1.7.0rc1
-scipy==1.15.2
+pandas
+scikit-learn
