--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mlflow==2.19.0 pandas scikit-learn joblib google-auth google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        pip install -r MLProject/requirements.txt
 
     - name: Run MLflow Project (Training)
       run: |
