--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MLflow CI with PythonEnv
+name: CI-MLflow-Training
 
 on:
   push:
@@ -6,24 +6,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-train-deploy:
+  train-model:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.12.7
+    - name: Setup Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.12.7
+        python-version: "3.12.7"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r MLProject/requirements.txt
+        pip install mlflow==2.19.0 seaborn scikit-learn pandas matplotlib joblib
 
-    - name: Run MLflow Project (Training)
+    - name: Run MLflow Project
       run: |
         cd MLProject
         mlflow run . --env-manager=local -P data_path=personality_dataset_clean.csv
