--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,27 @@
-name: CI-MLflow-Training
-
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  train-model:
+  build-train-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Setup Python
+    - name: Set up Python 3.12.7
       uses: actions/setup-python@v5
       with:
-        python-version: "3.12.7"
+        python-version: 3.12.7
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r MLProject/requirements.txt
-        pip install mlflow==2.19.0 seaborn scikit-learn pandas matplotlib joblib
+        pip install mlflow==2.19.0 pandas scikit-learn joblib 
 
-    - name: Run MLflow Project
+    - name: Run MLflow Project (Training)
       run: |
         cd MLProject
         mlflow run . --env-manager=local -P data_path=personality_dataset_clean.csv
