--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install mlflow==2.19.0 pandas scikit-learn joblib 
 
-    - name: Run MLflow Project (Training)
+    - name: Run MLflow Project
       run: |
         cd MLProject
         mlflow run . --env-manager=local -P data_path=personality_dataset_clean.csv
