--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mlflow==2.19.0 pandas scikit-learn joblib 
+        pip install mlflow==2.19.0 pandas scikit-learn joblib argparse seaborn matplotlib
 
     - name: Run MLflow Project
       run: |
