--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
       run: |
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add MLProject/model_artifacts/*
+        git add MLProject/*
         git commit -m "Upload artefak model dari run ${{ github.run_id }}"
         git push origin main
